# saito

./: .gitignore  README.org  pyproject.toml
agent01/: README.org  saito.asd
agent02/: README.org  saito.asd
agent02/src/: agent.lisp  logging.lisp  package.lisp  tool-weather.lisp
agent03/: README.org
agent03/src/: agent.lisp  config.lisp  tool-time.lisp  tools-core.lisp
agent04/: README.org
agent04/src/: agent.lisp  ollama-client.lisp  tool-weather.lisp  tools-core.lisp
images/: SAITO-2025-11-19-0907.excalidraw
mcp01/: README.org  saito.fasl
mcp01/src/: main.lisp
mcp02/: README.org
mcp02/client/: saito-client.asd
mcp02/client/src/: mcp-ollama-client.lisp
mcp02/server/: app.lisp  saito.asd
mcp02/server/src/: http-utils.lisp  logging.lisp  mcp-protocol.lisp  (+3 more)
mcp03/: README.org
mcp03/client/: saito-client.asd
mcp03/server/: app.lisp  saito.asd
mcp04/: README.org
mcp04/mcp-client/: README.markdown  README.org  app.lisp  mcp-client.asd
mcp04/mcp-server/: README.markdown  README.org  api.http  app.lisp  mcp-server.asd
saito01/: README.org
saito01/src/: main.lisp
saito02/src/: agent.lisp  http-utils.lisp  ollama-client.lisp
saito03/src/: http-utils.lisp  logging.lisp  utils.lisp
saito04/: README.org
saito04/src/: agent.lisp  config.lisp  http-utils.lisp  ollama-client.lisp  tool-time.lisp  tool-weather.lisp  tools-core.lisp  utils.lisp
saito04/tests/: main.lisp
saito05/: saito.asd
saito05/src/: http-utils.lisp  tool-time.lisp
src/: client.py  main.py  prompt_templates.py
src/mcp05/: __init__.py  config.py  server.py
(+34 files in other folders)
