[project]
name = "mcp05"
version = "0.1.0"
description = ""
authors = [
    {name = "Gandalf the white"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "llama-index-tools-mcp (>=0.4.3,<0.5.0)",
    "llama-index (>=0.14.5,<0.15.0)",
    "llama-index-llms-ollama (>=0.8.0,<0.9.0)",
    "google-search-results (>=2.4.2,<3.0.0)",
    "rich (>=14.2.0,<15.0.0)",
    "langchain (>=1.0.2,<2.0.0)",
    "mcp[cli] (>=1.18.0,<2.0.0)"
]

[tool.poetry]
packages = [{include = "mcp05", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.setuptools]
packages = ["mcp05", 
            "mcp05.models", 
            "mcp05.services", 
            "mcp05.utils"]

[tool.ty.environment]
python = "/Users/laurent/Ai/mcp05/.venv"
python-version = "3.12"
root = ["./src"]
